--- a/css/styleboek.css
+++ b/css/styleboek.css
@@ -2637,7 +2637,7 @@ background: radial-gradient(circle, rgba(160,59,49,1) 0%, rgba(37,32,28,1) 100%)
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba(3,3,3, .9);
+    background: radial-gradient(circle, rgba(160,59,49,1) 0%, rgba(37,32,28,1) 100%);
 }
 .bg-light-alfa:before{
     content: " ";
