--- a/css/styleboek.css
+++ b/css/styleboek.css
@@ -97,7 +97,9 @@ Section Text:       15px/1.7 "Open Sans", arial, sans-serif;
 
 -------------------------------------------------------------------*/
 
+.video-container { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; }
 
+.video-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
 #home > div > div > div > div > div.col-sm-6.col-lg-5.align-center.pt-20.pt-lg-0.mb-xs-30 > div.section-text.white.mb-70.mb-xs-40.text-justify{
 
