--- a/css/styleboek.css
+++ b/css/styleboek.css
@@ -96,6 +96,40 @@ Section Heading:    24px/1.3 "Open Sans", arial, sans-serif;
 Section Text:       15px/1.7 "Open Sans", arial, sans-serif;
 
 -------------------------------------------------------------------*/
+#trailers {
+
+    background: #f8f8f8;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+
+
+
+
+}
+
+
+
+
+
+
+body > section.page-section.bg-gray-lighter > div > div > div > div.col-sm-5.offset-sm-1  {
+    margin: auto;
+}
+
 
 #home {
     padding-bottom: 40px;
