--- a/css/styleboek.css
+++ b/css/styleboek.css
@@ -96,6 +96,17 @@ Section Heading:    24px/1.3 "Open Sans", arial, sans-serif;
 Section Text:       15px/1.7 "Open Sans", arial, sans-serif;
 
 -------------------------------------------------------------------*/
+#boektrailer {
+    margin-bottom: 17px !important;
+    margin: 12px;
+}
+
+#presentaties { margin-bottom: 43px;}
+
+
+
+
+
 
 .anchorover {
     display:block;
