--- a/css/styleboek.css
+++ b/css/styleboek.css
@@ -96,6 +96,201 @@ Section Heading:    24px/1.3 "Open Sans", arial, sans-serif;
 Section Text:       15px/1.7 "Open Sans", arial, sans-serif;
 
 -------------------------------------------------------------------*/
+
+#news
+
+{
+    background-color: #f8f8f8;
+}
+
+#presentaties > h2 {
+    position: relative;
+    top: 10px;
+    margin-bottom: 16px !important;
+}
+
+#boektrailer{
+    position: relative;
+    top: 16px;
+}
+
+}
+
+
+#video-container {    bottom: 10px;}
+
+
+
+
+
+#test {
+
+    margin: inherit;
+}
+
+
+
+
+
+#videos  {
+
+    background: radial-gradient(circle, rgba(160,59,49,1) 0%, rgba(37,32,28,1) 100%);
+}
+
+
+#videos h2{
+
+    color: white;
+    text-shadow: black 0px 0px 10px;
+}
+
+#news {
+
+    padding-bottom: 50px;
+}
+
+
+
+
+#news > div > div > div:nth-child(1) > div.post-prev-title.font-alt {
+margin-top: 12px !important;
+
+
+
+}
+
+
+#news div.post-prev-title.font-alt {
+
+
+    margin-top: 53px;
+
+
+
+
+}
+
+
+#news  div.post-prev-text 
+
+{font-size: 18px;}
+
+
+
+
+#news {
+padding-top: 10px;
+
+
+}
+
+
+#test > div:nth-child(3) > div.section-text.mb-70.mb-xs-40 {
+    margin-right: 40px!important;
+ 
+}
+
+
+
+#test > div:nth-child(2) > div
+{
+      margin-left: 5% ;
+}
+
+#test > div:nth-child(3) > div
+{
+    margin-right: 200px;
+}
+
+
+
+#test > div:nth-child(3) > div.section-text.mb-70.mb-xs-40 {
+
+    margin-bottom: 27px !important;
+
+}
+
+
+
+
+
+
+#uitgever {
+
+text-align: center;
+
+
+}
+
+body > section:nth-child(2) {
+
+padding: 10px;
+
+}
+
+
+
+
+#test {
+
+    background-color: #f8f8f8;
+
+
+}
+
+
+#news > div > h2 { 
+    
+ 
+    text-align:center !important;
+
+}
+
+
+#news {
+
+text-align: center;
+
+}
+
+
+
+
+#reactiesh2 {
+    margin: 0 !important;
+    margin-bottom: 15px !important;
+    background-color: #f8f8f8;
+}
+
+#reactiessection {
+   background-color: red;
+}
+
+
+
+
+
+body > div.row.services-grid {
+    background-color: #f8f8f8;
+
+
+}
+
+
+
+
+
+body > section:nth-child(2)  { 
+
+    padding-bottom: 0px;
+
+}
+body > section:nth-child(3) {
+    padding-top: 0px;
+
+}
+
+
 #boektrailer {
     margin-bottom: 17px !important;
     margin: 12px;
@@ -105,13 +300,19 @@ Section Text:       15px/1.7 "Open Sans", arial, sans-serif;
 
 
 
+.anchorliteratuurprijs {
+    display: block;
+    padding-top:100px;
+    margin-top:-100px;
+    
+ }
 
 
 
 .anchorover {
-    display:block;
+    display: block;
     padding-top:100px;
-    margin-top:-100px;
+    margin-top:-50px;
  }
 
 
@@ -130,10 +331,7 @@ Section Text:       15px/1.7 "Open Sans", arial, sans-serif;
 
 
 
-#trailers {
 
-    background: #f8f8f8;
-}
 
 @-webkit-keyframes AnimationName {
     0%{background-position:0% 50%}
