--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,14 @@ Section Heading:    24px/1.3 "Open Sans", arial, sans-serif;
 Section Text:       15px/1.7 "Open Sans", arial, sans-serif;
 
 -------------------------------------------------------------------*/
+#uitgever {
+    position: relative;
+    bottom: 67px;
+}
+
+}
+
+
 
 #anchorboekpresentaties {
 display: none;
