--- a/css/omhoog.css
+++ b/css/omhoog.css
@@ -21,7 +21,7 @@
   font-style: normal;
   font-size: 2em;
   line-height: 50px;
-  color: #F7D840;
+  color: #ffd500;
 }
 #button:hover {
   cursor: pointer;
