--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,68 @@ Section Heading:    24px/1.3 "Open Sans", arial, sans-serif;
 Section Text:       15px/1.7 "Open Sans", arial, sans-serif;
 
 -------------------------------------------------------------------*/
+#news {
+    position: relative;
+    top: -50px;
+}
+
+#videos {
+
+        position: relative;
+        top: -67px;
+    }
+
+
+
+
+
+body > section.page-section.bg-gray-lighter > div > div > h2 {
+    margin-bottom: 35px !important;
+}
+
+
+
+#test > h2 {
+    margin-bottom: 35px !important;
+    margin-top: 35px !important;
+
+}
+
+
+
+#news > div > h2 {
+    margin-bottom: 30px !important;
+}
+
+
+#news {
+    position: relative;
+    top: -20px;
+
+
+}
+
+
+
+#news > div > div > div:nth-child(1) {
+    opacity: 1;
+    position: relative;
+    right: 54px;
+
+
+}
+
+
+
+#news > div > div > div:nth-child(1) > div.post-prev-text {
+    width: 406px;
+
+
+}
+
+
+
+
 #uitgever {
     position: relative;
     bottom: 67px;
@@ -175,7 +237,8 @@ margin-top: 12px !important;
 #news div.post-prev-title.font-alt {
 
 
-    margin-top: 53px;
+    margin-top: 0;
+   
 
 
 
@@ -324,7 +387,7 @@ body > section:nth-child(3) {
 .anchorover {
     display: block;
     padding-top:100px;
-    margin-top:-50px;
+    margin-top:-74px;
  }
 
 
