--- a/css/style.css
+++ b/css/style.css
@@ -96,10 +96,17 @@ Section Heading:    24px/1.3 "Open Sans", arial, sans-serif;
 Section Text:       15px/1.7 "Open Sans", arial, sans-serif;
 
 -------------------------------------------------------------------*/
+#home > div > div > div > div > div.col-sm-6.col-lg-5.align-center.pt-20.pt-lg-0.mb-xs-30 > div.section-text.white.mb-70.mb-xs-40.text-justify > div > div.footer-social-links.mb-110.mb-xs-60 > a:nth-child(3) {
+    color: white !important;
+    text-decoration: none !important;
+}
 
+::selection
 
-
-
+#home > div > div > div > div > div.col-sm-6.col-lg-5.align-center.pt-20.pt-lg-0.mb-xs-30 > div.section-text.white.mb-70.mb-xs-40.text-justify > div > div.footer-social-links.mb-110.mb-xs-60 > a:nth-child(3)::selection {
+    color: white !important;
+    text-decoration: none !important;
+}
 
 
 #home > div > div > div > div > div.col-sm-6.col-lg-5.align-center.pt-20.pt-lg-0.mb-xs-30 > div.section-text.white.mb-70.mb-xs-40.text-justify > div > div.footer-social-links.mb-110.mb-xs-60 {
